--- a/public/style.css
+++ b/public/style.css
@@ -138,17 +138,22 @@ form * {
   align-items: center;
   margin: 12px;
   border: 2px solid #DEEBFF;
-  border-radius: 50px;
+  border-radius: 65px;
 }
-.filters-card :hover {
-  
+.filters-cards a :hover {
+  opacity: .8;
 }
 .filters-card i {
-  padding: 10px 15px;
+  padding: 13px;
   background-color: #DEEBFF;
   color: #0065FC;
   font-size: 1.1em;
-  border-radius: 40%;
+  border-radius: 50%;
+  margin-left: -2px;
+  width: 20px;
+  height: 18px;
+  text-align: center;
+  align-self: center;
 }
 .filters-card p {
   padding: 0 10px;
